header and footer are stylized

--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -1,10 +1,10 @@
 <% if Contact.all.count == 1 %>
-  <h3>
-    There is <span class="num_contacts"><%= Contact.all.count.to_s %></span> contact
+  <h3 class="contact-header">
+    There is <span class="num-contacts"><%= Contact.all.count.to_s %></span> contact
   </h3>
 <% else %>
-  <h3>
-    There are <span class="num_contacts"><%= Contact.all.count.to_s %></span> contacts
+  <h3 class="contact-header">
+    There are <span class="num-contacts"><%= Contact.all.count.to_s %></span> contacts
   </h3>
 <% end %>
 
@@ -14,8 +14,8 @@
     <li><%= contact.first_name %> <%= contact.last_name %></li>
     <li>(<%= contact.email %>)</li>
   </div>
-  <div class="contact_option">
-    <li><span class="contact_option"><a href="/contacts/edit">Edit</a></span> | <span class="contact_option"><a href="/contacts/delete">Delete</a></span>
+  <div class="contact-option">
+    <li><span class="contact-option"><a href="/contacts/edit">Edit</a></span> | <span class="contact-option"><a href="/contacts/delete">Delete</a></span>
   </div>
 <% end %>
 </ul>
