--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,9 +13,9 @@
     <header>
       <h1 class="logo"><%= @crm_app_name %></h1>
       <ul>
-        <li class="menu-item"><a href="/">Home</a></li>
-        <li class="menu-item"><a href="/contacts">View all contacts</a></li>
-        <li class="menu-item"><a href="/contacts/new">Add a new contact</a></li>
+        <li class="menu-item"><a href="/contacts">Home</a></li>
+        <li class="menu-item"><a href="/contacts/new">Add a contact</a></li>
+        <li class="menu-item"><a href="/about">About</a></li>
       </ul>
     </header>
 
