--- a/views/new_contact.erb
+++ b/views/new_contact.erb
@@ -1,4 +1,6 @@
-<h1>Create new Contact</h1>
+<header class="body-header">
+  Create a new contact
+</header>
 
 <form action='/contacts' method='post'>
   <input type='text' name='first_name'>
