--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,5 @@
+/*GENERAL*/
+
 body {
     font-family: sans-serif;
     font-size: 20px;
@@ -8,8 +10,15 @@ a {
     text-decoration: inherit;
 }
 
+main {
+    margin: auto;
+    width: 95%;
+}
 
-header {
+
+/*NAV, FOOTER ON ALL PAGES*/
+
+nav {
     text-align: center;
 }
 
@@ -46,12 +55,9 @@ footer {
     width: 100%;
 }
 
-main {
-    margin: auto;
-    width: 95%;
-}
+/*CONTACTS PAGE*/
 
-h3.contact-header {
+header.body-header {
     font-size: 25px;
     background-color: #ef7575;
     margin-top: 14px;
@@ -59,6 +65,14 @@ h3.contact-header {
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 10px;
+}
+
+.body-item {
+    background: #75efe9;
+    padding-left: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-bottom: 14px;
 }
 
 span.num-contacts {
