--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -12,7 +12,9 @@
 <% Contact.all.each do |contact| %>
   <div class="body-item">
     <div class="contact">
-      <li class="contact-name"><%= contact.first_name %> <%= contact.last_name %></li>
+      <a class="contact_link" href="/contacts/<%= contact.id %>">
+        <li class="contact-name"><%= contact.first_name %> <%= contact.last_name %></li>
+      </a>
       <li class="contact-email">(<%= contact.email %>)</li>
     </div>
     <div class="contact-option">
