--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -18,7 +18,7 @@
       <li class="contact-email">(<%= contact.email %>)</li>
     </div>
     <div class="contact-option">
-      <li class="contact-sub"><span class="contact-option"><a href="/contacts/edit">Edit</a></span> | <span class="contact-option"><a href="/contacts/delete">Delete</a></span></li>
+      <li class="contact-sub"><span class="contact-option"><a href="/contacts/<%= contact.id %>/edit">Edit</a></span> | <span class="contact-option"><a href="/contacts/<%= contact.id %>/delete">Delete</a></span></li>
     </div>
   </div>
 <% end %>
