delete function works (changed to get request so i can use a link instead of a button)

--- a/public/styles.css
+++ b/public/styles.css
@@ -89,6 +89,12 @@ li.contact-email {
 
 li.contact-name {
     display: inline;
+    font-size: 27px;
+    font-weight: 900;
+}
+
+li.contact-note {
+    padding: 10px;
 }
 
 .contact.info {
@@ -100,8 +106,7 @@ li.contact-name {
 }
 
 li.contact-name {
-    font-size: 27px;
-    font-weight: 900;
+
 }
 
 li.contact-sub {
