--- a/views/new_contact.erb
+++ b/views/new_contact.erb
@@ -2,10 +2,12 @@
   Create a new contact
 </header>
 
-<form action='/contacts' method='post'>
-  <input type='text' name='first_name'>
-  <input type='text' name='last_name'>
-  <input type='text' name='email'>
-  <input type='text' name='note'>
-  <input type='submit' value='New Contact'>
-</form>
+<div class="body-item">
+  <form action='/contacts' method='post'>
+    <input type='text' name='first_name'>
+    <input type='text' name='last_name'>
+    <input type='text' name='email'>
+    <input type='text' name='note'>
+    <input type='submit' value='New Contact'>
+  </form>
+</div>
