--- a/views/show_contact.erb
+++ b/views/show_contact.erb
@@ -1,4 +1,12 @@
-<h1><%= @contact.first_name %> <%= @contact.last_name %></h1>
-<p><strong>Email:</strong> <%= @contact.email %></p>
-<p><strong>Note:</strong></p>
-<p><%= @contact.note %></p>
+<div class="body-item">
+  <ul>
+    <div class="contact">
+      <li class="contact-name"><%= @contact.first_name %> <%= @contact.last_name %></li>
+      <li class="contact-email"><%= @contact.email %></li>
+      <li class="contact-note"><%= @contact.note %></li>
+    </div>
+    <div class="contact-option">
+      <li class="contact-sub"><span class="contact-option"><a href="/contacts/<%= @contact.id %>/edit">Edit</a></span> | <span class="contact-option"><a href="/contacts/<%= @contact.id %>/delete">Delete</a></span></li>
+    </div>
+  </ul>
+</div>
